--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.ravaelamanov.intellijhttpclient
-pluginName = Intellij-Http-Client
+pluginName = Http-Client
 pluginVersion = 0.0.1
 pluginSinceBuild = 202
 pluginUntilBuild = 203.*
