--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,5 +8,7 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <applicationService serviceInterface="services.HttpRequestSenderService"
+                            serviceImplementation="services.impl.HttpRequestSenderServiceImpl"/>
     </extensions>
 </idea-plugin>
