Added icon to the plugin, updated plugin.xml.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,7 +10,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceInterface="services.HttpRequestSenderService"
                             serviceImplementation="services.impl.HttpRequestSenderServiceImpl"/>
-        <toolWindow id="Http-client" secondary="true" icon="AllIcons.General.Modified" anchor="right"
+        <toolWindow id="Http-client" secondary="true" icon="/META-INF/pigeon.svg" anchor="right"
                     factoryClass="ui.toolWindow.DeclarativeToolWindowFactory"/>
     </extensions>
 </idea-plugin>
