resource loader added

--- a/src/main/resources/uiParameters.properties
+++ b/src/main/resources/uiParameters.properties
@@ -2,4 +2,5 @@ paddingTop = 15
 paddingLeft = 15
 paddingBottom = 0
 paddingRight = 15
-COLUMNS_NUMBER = 20
+columnsNumberURL = 20
+columnsNumberStatusCode = 4
