getting UI properties programmatically using UIProperties.kt

--- a/src/main/resources/uiParameters.properties
+++ b/src/main/resources/uiParameters.properties
@@ -2,5 +2,9 @@ paddingTop = 15
 paddingLeft = 15
 paddingBottom = 0
 paddingRight = 15
-columnsNumberURL = 20
+
 columnsNumberStatusCode = 4
+columnsNumberURL = 20
+columnsNumberUsername = 20
+columnsNumberPassword = 20
+columnsNumberToken = 20
